[gd_scene load_steps=10 format=3 uid="uid://2oam16boclrl"]

[ext_resource type="Script" uid="uid://dealg7puqnyqj" path="res://scripts/player/meredith_player.gd" id="1_l8cg3"]
[ext_resource type="PackedScene" uid="uid://7cg7trfrr6n3" path="res://scenes/frames/meredith_frames.tscn" id="2_gdab3"]
[ext_resource type="PackedScene" uid="uid://cktryo5wbcouh" path="res://scenes/ui/player_ui.tscn" id="3_l8cg3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1obkj"]
radius = 6.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gdab3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1obkj"]
size = Vector2(25.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t0tph"]
size = Vector2(25, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8cg3"]
size = Vector2(20, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1f8ad"]
size = Vector2(20, 25.5)

[node name="MeredithPlayer" type="CharacterBody2D" groups=["Ally", "Player"]]
scale = Vector2(2, 2)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_l8cg3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1obkj")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_gdab3")
debug_color = Color(0.85882354, 0.27058825, 0.62352943, 0.41960785)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AttackUpHitbox" type="Area2D" parent="." groups=["AllyDamageSource"]]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackUpHitbox"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_1obkj")
disabled = true

[node name="AttackDownHitbox" type="Area2D" parent="." groups=["AllyDamageSource"]]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDownHitbox"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_t0tph")
disabled = true

[node name="AttackRightHitbox" type="Area2D" parent="." groups=["AllyDamageSource"]]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRightHitbox"]
position = Vector2(20, 0)
shape = SubResource("RectangleShape2D_l8cg3")
disabled = true

[node name="AttackLeftHitbox" type="Area2D" parent="." groups=["AllyDamageSource"]]
collision_layer = 2
collision_mask = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackLeftHitbox"]
position = Vector2(-20, 0)
shape = SubResource("RectangleShape2D_1f8ad")
disabled = true

[node name="Frames" parent="." instance=ExtResource("2_gdab3")]
animation = &"idle"

[node name="PlayerUI" parent="." instance=ExtResource("3_l8cg3")]
